@@ -27,6 +27,7 @@ Enhancements:
 - #6984 Update synergy UI. Client error messages
 - #6962 | #6965 Add macOS 10.13 builder
 - #6990 Change VersionChecker URL and include system language in the header
+- #6999 Detect if Linux is running with Wayland, and display a warning message
 ===========
 
 v1.13.1-stable
